--- a/DeFi_Wallet_Credit_Scoring.ipynb
+++ b/DeFi_Wallet_Credit_Scoring.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZccaq1D57WVgDvzytPBq0",
+      "authorship_tag": "ABX9TyPVaWAUAiN9OfO/4UoTaIqN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -570,7 +570,7 @@
     {
       "cell_type": "code",
       "source": [
-        "features[['userWallet', 'score']].to_csv('wallet_scores.csv', index=False)\n",
+        "features[['userWallet', 'score','credit_level']].to_csv('wallet_scores.csv', index=False)\n",
         "files.download('wallet_scores.csv')"
       ],
       "metadata": {
@@ -579,9 +579,9 @@
           "height": 17
         },
         "id": "Df7I88UPbXUo",
-        "outputId": "2ed5c513-ca16-46da-90f9-29ccadae233b"
+        "outputId": "e160d08b-06d3-4f38-acef-f8b64beb1b0e"
       },
-      "execution_count": 73,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "display_data",
@@ -642,7 +642,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_ca1f4270-4d4b-47f5-9b04-66d77ad6c7ac\", \"wallet_scores.csv\", 157449)"
+              "download(\"download_f1163357-4e11-4fa0-8708-b84e7837cc61\", \"wallet_scores.csv\", 157449)"
             ]
           },
           "metadata": {}
