--- a/DeFi_Wallet_Credit_Scoring.ipynb
+++ b/DeFi_Wallet_Credit_Scoring.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPVaWAUAiN9OfO/4UoTaIqN",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Ruchi765/Assignment/blob/main/DeFi_Wallet_Credit_Scoring.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 64,
@@ -558,7 +570,7 @@
     {
       "cell_type": "code",
       "source": [
-        "features[['userWallet', 'score']].to_csv('wallet_scores.csv', index=False)\n",
+        "features[['userWallet', 'score','credit_level']].to_csv('wallet_scores.csv', index=False)\n",
         "files.download('wallet_scores.csv')"
       ],
       "metadata": {
@@ -567,9 +579,9 @@
           "height": 17
         },
         "id": "Df7I88UPbXUo",
-        "outputId": "2ed5c513-ca16-46da-90f9-29ccadae233b"
+        "outputId": "195e2cf1-1cdc-40a2-8f96-72425c00b6da"
       },
-      "execution_count": 73,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "display_data",
@@ -630,7 +642,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_ca1f4270-4d4b-47f5-9b04-66d77ad6c7ac\", \"wallet_scores.csv\", 157449)"
+              "download(\"download_5273b1ca-addf-48ce-ade2-7c9fe7873fbe\", \"wallet_scores.csv\", 171458)"
             ]
           },
           "metadata": {}
